assets/css/style.css
body {
    min-width: 375px;
    height: 100%;
    background-image: linear-gradient(rgb(0, 0, 0), rgb(139, 139, 137));
}

main {
    width: 100% !important;
    max-width: 2000px;
    padding: 0 1rem;
}

p {
    font-size: 1.5rem;
}

#full-container {
    padding: 0;
}

#app-title {
    font-size: 1.2rem;
    color: white;
}

#drop-down {
    border-radius: 0.8rem;
    background-color: transparent;
    border: none;
}

#search-btn {
    width: 2rem !important;
    height: 2rem !important;
    background-color: transparent;
    border: none;
}

#city-name {
    width: 120px;
    border-radius: 1rem;
    margin: 1rem 1rem 1rem 0.1rem;
}

#current-card {
    width: 100%;
    height: 100%;
    background-image: 
    url("./assets/img/pexels-ruvim-miksanskiy-1438761.jpg")
     blue center cover no-repeat;
    border-radius: 1rem !important;
    box-shadow: 0 0 3px 0.5px white;
    padding: 1rem 0 !important;
    margin-top: 1rem;
}

#current-weather {
    padding: 0;
}

.header-box .city-name {
    margin-right: 2rem !important;
}

.header-box #weather-icon {
    margin-top: -1rem;
    margin-left: 1rem;
}

.body-box {
    height: 60%;
    margin-top: -1rem;
}

.uvi-container {
    display: inline;
}

.uviLow {
    background-color: rgba(3, 250, 3, 0.5);
    border-radius: 1rem;
    margin: 1rem;
}

.uviModerate {
    background-color: rgba(255, 255, 0, 0.5);
    border-radius: 1rem;
    margin: 1rem;
}

.uviHigh {
    background-color: rgba(255, 166, 0, 0.5);
    border-radius: 1rem;
    margin: 1rem;
}

.uviVeryHigh {
    background-color :rgba(255, 0, 0, 0.5);
    border-radius: 1rem;
    margin: 1rem;
}

#current-img {
    border-radius: 1rem;
}

#five-day-label {
    width: 100%;
    text-align: center;
}

#scroll-label {
    width: 100%;
    text-align: center;
}

#five-day-card {
    /* display: flex;
    flex-direction: row;
    justify-content: center; */
    border-radius: 1rem !important;
    box-shadow: 0 0 3px 0.5px white;
    overflow: auto;
    white-space: nowrap;
    margin: 0.5rem 0 0 0;
}

.five-day {
    display: inline-block;
    width: 50vw;
    border-right: 1px solid white;
    border-left: 1px solid white;
}

.five-day #weather-icon {
    margin-top: -1rem;
    margin-left: -1rem;
}

.fiveDayTemp {
    margin-top: -2rem;
}

@media screen and (min-width: 768px) {
    #app-title {
        font-size: 2rem;
    }

    #bug-icon {
        width: 30px;
        height: 30px;
    }

    #drop-down-img {
        width: 50px;
        height: 50px;
    }

    #search-btn {
        margin-right: 0.5rem !important;
        margin-bottom: 0.5rem;
    }

    #search-btn-img {
        width: 30px;
        height: 30px;
    }

    #fake-systems {
        padding-top: 0.5rem;
    }

    #bell-icon {
        width: 30px;
        height: 30px;
    }

    #gear-icon {
        width: 30px;
        height: 30px;
    }
    
    #current-card {
        max-width: 90%;
    }

    .header-box {
        flex-wrap: none;
    }

    .header-box .city-name {
        margin-right: 2rem !important;
    }

    .header-box #weather-icon {
        margin-top: -2.5rem;
        margin-left: 1rem;
    }

    .body-box {
        margin-top: -3rem;
    }

    #five-day-card {
        max-width: 90%;
    }

    .five-day {
        max-width: 33.3%;
        margin: 0rem;
    }
}

@media screen and (min-width: 1024px) {    
    main {
      margin: 0 auto;
      padding: 0;
    }

    #current-card {
        width: 90%;
        max-width: 1024px;
    }

    #five-day-card {
        width: 90%;
        width: 1024px;
        flex-wrap: none;
        justify-content: center;
    }

    .five-day {
        max-width: 20%;
        margin: 0rem;
    }
}

